# kurumi-rs

./: .gitignore  Cargo.toml
config/: config.toml
docs/: index.md  page 1.md  page 2.md  page 3.md  plan.md
src/: bot.rs  main.rs
src/commands/: command_trait.rs  mod.rs
src/commands/general/: mod.rs  ping.rs
src/commands/message/: mod.rs  ping.rs
src/events/: message.rs  mod.rs  ready.rs
src/framework/: command_handler.rs  context.rs  event_handler.rs  mod.rs
src/models/: config.rs  mod.rs
src/utils/: constants.rs  helpers.rs  mod.rs
